# agui-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  publish.yml
crates/ag-ui-client/: Cargo.toml
crates/ag-ui-client/examples/: basic_agent.rs  streaming_client.rs
crates/ag-ui-client/src/: agent.rs  apply.rs  chunks.rs  compact.rs  debug_logger.rs  error.rs  http.rs  interrupts.rs  legacy.rs  lib.rs  middleware.rs  subscriber.rs  transform.rs  verify.rs
crates/ag-ui-client/tests/: agent_concurrent.rs  agent_debug.rs  agent_http.rs  agent_multiple_runs.rs  agent_mutations.rs  agent_result.rs  agent_text_roles.rs  chunks_transform.rs  chunks_transform_debug.rs  chunks_transform_roles.rs  debug_logger.rs  interrupts_helpers.rs  interrupts_lifecycle.rs  legacy_bridged.rs  middleware_backward_compat_0_0_39.rs  middleware_backward_compat_0_0_45.rs  middleware_backward_compat_0_0_47.rs  middleware_chained_integration.rs  middleware_chained_run_next_with_state.rs  middleware_core.rs  middleware_filter_tool_calls.rs  middleware_function.rs  middleware_live_events.rs  middleware_with_state.rs  run_http_request.rs  subscriber.rs  transform_http.rs  transform_proto.rs  transform_sse.rs  verify_concurrent.rs  verify_debug.rs  verify_events.rs  verify_lifecycle.rs  verify_multiple_runs.rs  verify_steps.rs  verify_text_messages.rs  verify_tool_calls.rs
crates/ag-ui-core/: Cargo.toml  README.md
crates/ag-ui-core/src/: capabilities.rs  event_factories.rs  events.rs  lib.rs
crates/ag-ui-core/tests/: activity_events.rs  backwards_compatibility.rs  capabilities_interrupts.rs  event_factories.rs  events_role_defaults.rs  index.rs  interrupts.rs  multimodal_messages.rs  run_finished_event.rs
crates/ag-ui-encoder/: Cargo.toml
crates/ag-ui-encoder/src/: lib.rs
crates/ag-ui-encoder/tests/: encoder.rs
crates/ag-ui-server/: Cargo.toml
crates/ag-ui-server/examples/: agentic_chat.rs  agentic_generative_ui.rs  backend_tool_rendering.rs  echo_agent.rs  human_in_the_loop.rs  predictive_state_updates.rs  shared_state.rs  tool_based_generative_ui.rs
crates/ag-ui-server/src/: axum.rs  emit.rs  error.rs  handler.rs  lib.rs  sse.rs
crates/agui-rs/: Cargo.toml  README.md
crates/agui-rs-client/: Cargo.toml  README.md
crates/agui-rs-client/examples/: basic_agent.rs  streaming_client.rs
crates/agui-rs-client/src/: agent.rs  apply.rs  chunks.rs  compact.rs  debug_logger.rs  error.rs  http.rs  interrupts.rs  legacy.rs  lib.rs  middleware.rs  subscriber.rs  transform.rs  verify.rs
crates/agui-rs-client/tests/: agent_clone.rs  agent_concurrent.rs  agent_debug.rs  agent_http.rs  agent_lifecycle.rs  agent_multiple_runs.rs  agent_mutations.rs  agent_mutators.rs  agent_result.rs  agent_text_roles.rs  agent_version.rs  chunks_transform.rs  chunks_transform_roles.rs  debug_logger.rs  interrupts_helpers.rs  interrupts_lifecycle.rs  legacy_bridged.rs  middleware_auto_insertion.rs  middleware_backward_compat_0_0_39.rs  middleware_backward_compat_0_0_45.rs  middleware_backward_compat_0_0_47.rs  middleware_chained_integration.rs  middleware_chained_run_next_with_state.rs  middleware_core.rs  middleware_filter_tool_calls.rs  middleware_function.rs  middleware_live_events.rs  middleware_with_state.rs  run_http_request.rs  subscriber.rs  subscriber_registry.rs  transform_debug.rs  transform_http.rs  transform_proto.rs  transform_sse.rs  verify_concurrent.rs  verify_events.rs  verify_lifecycle.rs  verify_multiple_runs.rs  verify_steps.rs  (+2 more)
crates/agui-rs-core/: Cargo.toml  README.md
crates/agui-rs-core/src/: capabilities.rs  error.rs  events.rs  lib.rs  types.rs
crates/agui-rs-core/tests/: activity_events.rs  backwards_compatibility.rs  capabilities_interrupts.rs  event_factories.rs  events_role_defaults.rs  interrupts.rs  multimodal_messages.rs  run_finished_event.rs
crates/agui-rs-encoder/: Cargo.toml  README.md
crates/agui-rs-encoder/src/: lib.rs
crates/agui-rs-encoder/tests/: encoder.rs
crates/agui-rs-proto/: Cargo.toml
crates/agui-rs-proto/src/: convert.rs  lib.rs  schema.rs  value.rs
crates/agui-rs-proto/tests/: round_trip.rs
crates/agui-rs-server/: Cargo.toml  README.md
crates/agui-rs-server/examples/: agentic_chat.rs  agentic_generative_ui.rs  backend_tool_rendering.rs  echo_agent.rs  human_in_the_loop.rs  predictive_state_updates.rs  shared_state.rs  tool_based_generative_ui.rs
crates/agui-rs-server/src/: axum.rs  emit.rs  error.rs  handler.rs  lib.rs  sse.rs
crates/agui-rs/src/: lib.rs
docs/: test-reconciliation.md  typescript-alignment.md
