[workspace]
resolver = "2"
members = [
    "crates/agui-rs-core",
    "crates/agui-rs-encoder",
    "crates/agui-rs-proto",
    "crates/agui-rs-client",
    "crates/agui-rs-server",
    "crates/agui-rs",
]

[workspace.package]
version      = "0.1.1"
edition      = "2021"
rust-version = "1.75"
license      = "Apache-2.0"
repository   = "https://github.com/agentsyaml/agui-rs"
homepage     = "https://github.com/agentsyaml/agui-rs"
description  = "Rust SDK for the AG-UI (Agent-User Interaction) protocol"
keywords     = ["agui", "agent", "ai", "sse", "streaming"]
categories   = ["api-bindings", "asynchronous"]
authors      = ["agentsyaml"]

[workspace.dependencies]
# Internal crates (path-resolved within workspace)
agui-rs-core    = { path = "crates/agui-rs-core",    version = "0.1.1" }
agui-rs-encoder = { path = "crates/agui-rs-encoder", version = "0.1.1" }
agui-rs-proto   = { path = "crates/agui-rs-proto",   version = "0.1.1" }
agui-rs-client  = { path = "crates/agui-rs-client",  version = "0.1.1" }
agui-rs-server  = { path = "crates/agui-rs-server",  version = "0.1.1" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime / streams
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"
pin-project-lite = "0.2"
bytes = "1"

# HTTP / SSE
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"

# Server
axum = "0.7"
tower = "0.5"
http = "1"

# JSON Patch (RFC 6902) for STATE_DELTA / ACTIVITY_DELTA
json-patch = "2"

# Protobuf (binary AG-UI event encoding)
prost = "0.13"
prost-types = "0.13"

# Errors / logging
thiserror = "1"
tracing = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }

# Dev
tokio-test = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
