[package]
name = "ag-ui-encoder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SSE and protobuf encoding for AG-UI events"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ag-ui-core = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
