[package]
name = "ag-ui-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Server SDK for the AG-UI protocol"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ag-ui-core = { workspace = true }
ag-ui-encoder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
axum = { workspace = true }
tower = { workspace = true }

[[example]]
name = "echo_agent"
path = "examples/echo_agent.rs"

[[example]]
name = "tool_based_generative_ui"
path = "examples/tool_based_generative_ui.rs"

[[example]]
name = "shared_state"
path = "examples/shared_state.rs"

[[example]]
name = "human_in_the_loop"
path = "examples/human_in_the_loop.rs"

[[example]]
name = "agentic_chat"
path = "examples/agentic_chat.rs"

[[example]]
name = "agentic_generative_ui"
path = "examples/agentic_generative_ui.rs"

[[example]]
name = "backend_tool_rendering"
path = "examples/backend_tool_rendering.rs"

[[example]]
name = "predictive_state_updates"
path = "examples/predictive_state_updates.rs"
