[package]
name = "agui-rs-encoder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SSE and protobuf encoding for AG-UI events"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "agui_rs_encoder"

[dependencies]
agui-rs-core = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
