[package]
name = "agui-rs-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Protobuf binary encoding for the AG-UI protocol"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "agui_rs_proto"

[dependencies]
agui-rs-core = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
agui-rs-core = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
