[package]
name = "agui-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rust SDK for the AG-UI (Agent-User Interaction) protocol — facade crate"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
name = "agui_rs"

[features]
default = ["core"]
core    = ["dep:agui-rs-core"]
encoder = ["dep:agui-rs-encoder", "core"]
proto   = ["dep:agui-rs-proto", "core"]
client  = ["dep:agui-rs-client", "core"]
server  = ["dep:agui-rs-server", "core", "encoder"]
full    = ["client", "server", "encoder", "proto"]

[dependencies]
agui-rs-core    = { workspace = true, optional = true }
agui-rs-encoder = { workspace = true, optional = true }
agui-rs-proto   = { workspace = true, optional = true }
agui-rs-client  = { workspace = true, optional = true }
agui-rs-server  = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
